tests/errors/sem.expected-const.arr-type.or
main :: () -> void {
    f := int;
    [10]f;
};
